Se reorganizo boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">   
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SupportMe</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -51,14 +51,14 @@
 
     <section title="Window-Register" class="section-register" id="section-register">
         <div>
-           <h1>Registro</h1>
-           <input type="text" placeholder="Nombre" id="register-name" class="register-name">
-           <input type="email" placeholder="e-mail" id="register-email" class="register-email">
-           <input type="text" placeholder="Username" id="register-username" class="register-username">
-           <input type="password" placeholder="Contraseña" id="register-password" class="register-password">
-           <input type="password" placeholder="Confirmar Contraseña" id="register-cp" class="register-cp">
+            <h1>Registro</h1>
+            <input type="text" placeholder="Nombre" id="register-name" class="register-name">
+            <input type="email" placeholder="e-mail" id="register-email" class="register-email">
+            <input type="text" placeholder="Username" id="register-username" class="register-username">
+            <input type="password" placeholder="Contraseña" id="register-password" class="register-password">
+            <input type="password" placeholder="Confirmar Contraseña" id="register-cp" class="register-cp">
 
-           <select name="Estado" size="1" class="register-select" id="register-select">
+            <select name="Estado" size="1" class="register-select" id="register-select">
                <option value="nothing">Elige tu estado</option>
                <option value="ags">Aguascalientes</option>
                <option value="bc">Baja California</option>
@@ -94,10 +94,10 @@
                <option value="zac">Zacatecas</option>
            </select>
 
-           <input type="text" placeholder="Ciudad" class="register-city" id="register-city">
-           <input type="text" placeholder="Unidad Habitacional" class="register-uhm" id="register-uhm">
+            <input type="text" placeholder="Ciudad" class="register-city" id="register-city">
+            <input type="text" placeholder="Unidad Habitacional" class="register-uhm" id="register-uhm">
 
-           <input type="button" value="RegistrarMe" id="button-register" class="button-register">
+            <input type="button" value="RegistrarMe" id="button-register" class="button-register">
         </div>
 
     </section>
@@ -107,7 +107,7 @@
 
 
 
-    <script type="text/javascript" src="lib/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <!-- <script type="text/javascript" src="main.js"></script> -->
 
 
