--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,21 @@
 </head>
 
 <body>
+
+    <!-- firebase -->
+
+<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-database.js"></script>
+
+
+
+
     <section class="welcome-page" id="welcomepage">
         <div class="welcome-body">
             <div class="logo">
