Se agrega SPA a la aplicación web.Contenedores en HTML, carpetas para cada una de las secciones con archivos js. También los archivos utils (que marca como se hará la ruta y app.js donde se importan las rutas con cada unos de los archivos

--- a/src/index.html
+++ b/src/index.html
@@ -22,33 +22,16 @@
     <header id="header-container"></header>
     <!-- Se hace un contenedor para el main -->
     <main id="page-container" class="container pageEntry"></main>
-    <p>Loading...</p>
     <!-- Se hace un contenedor para el footer -->
     <footer id="footer-container"></footer>
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#config-web-app -->
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyBHUStouS-ebrZIAVA8rpkCHPTqpIi5k40",
-        authDomain: "supporteme-147ea.firebaseapp.com",
-        databaseURL: "https://supporteme-147ea.firebaseio.com",
-        projectId: "supporteme-147ea",
-        storageBucket: "",
-        messagingSenderId: "1007267288966",
-        appId: "1:1007267288966:web:ab035c27ed063a27"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
 
     <!-- pruebas con el firebas -->
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./app.js "></script>
     <script type="text/javascript" src="firebase.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
