--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SupportMe</title>
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap"
       rel="stylesheet"
@@ -33,6 +38,5 @@
     <!-- pruebas con el firebas -->
     <script type="module" src="./app.js "></script>
     <script type="text/javascript" src="firebase.js"></script>
-    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
