--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SupportMe</title>
-
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" />
     <link rel="stylesheet" href="style.css" />
@@ -23,12 +22,19 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#config-web-app -->
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-
     <!-- pruebas con el firebas -->
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <script type="module" src="./app.js "></script>
-    <script type="text/javascript" src="firebase.js"></script>
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-database.js"></script>
+
+
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="firebase.js"></script>
 </body>
 
 </html>
