Se agrego firebase a la app con SAP

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,15 @@
     <!-- Se hace un contenedor para el main -->
     <main id="page-container" class="container pageEntry"></main>
     <!-- Se hace un contenedor para el footer -->
-    <footer id="footer-container"></footer> 
+    <footer id="footer-container"></footer>     
     
+    <script type="module" src="./app.js "></script>   
     
-    <script type="module" src="./app.js "></script>        
+    <!-- Probando Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+    <!-- Archivo para la autenticación en firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
+   
     <!-- Archivo .js del firebase -->
     <!-- <script type="text/javascript" src="firebase.js"></script> -->
   </body>
