--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,6 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
    
     <!-- Archivo .js del firebase -->
-    <!-- <script type="text/javascript" src="firebase.js"></script> -->
+    <script type="text/javascript" src="firebase.js"></script>
   </body>
 </html>
