Hicimos maquetación de cada una de las secciones (home, perfil, timeline, registro y inicio de seción). También se maqueto y agregó estilos al navbar. Ya inicia sesión con email y contraseña y con las modalidades de Gmail y Facebook. Ya se puede hacer un nuevo registro con verficación a correo electrónico

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SupportMe</title>
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap"
       rel="stylesheet"
     />
@@ -27,8 +21,6 @@
     <header id="header-container"></header>
     <!-- Se hace un contenedor para el main -->
     <main id="page-container" class="container pageEntry"></main>
-    <!-- Se hace un contenedor para el footer -->
-    <footer id="footer-container"></footer>
 
     <script type="module" src="./app.js "></script>
 
@@ -36,6 +28,8 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <!-- Archivo para la autenticación en firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
 
     <!-- Archivo .js del firebase -->
     <script type="text/javascript" src="firebase.js"></script>
