Resolvimos problema de salir de sesión de usuario desde las dos secciones que tienen liga CERRAR SESIÓN

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,17 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyDGhmuAIAHIH_sHref9YI0QiXhAhkc1OpU",
+        authDomain: "supportme-565d4.firebaseapp.com",
+        databaseURL: "https://supportme-565d4.firebaseio.com",
+        projectId: "supportme-565d4",
+        storageBucket: "supportme-565d4.appspot.com",
+        messagingSenderId: "811873389744",
+        appId: "1:811873389744:web:7c5179900d830cfa"
+      };
+    </script>
 
     <!-- Archivo .js del firebase -->
     <script type="text/javascript" src="firebase.js"></script>
