Agregamos funcion para guardar datos en la base de datos de Firebase. Agrgamos archivo js para base de datos

--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,6 @@
 
     <!-- Archivo .js del firebase -->
     <script type="text/javascript" src="firebase.js"></script>
+    <script src="firestore.js"></script>
   </body>
 </html>
